# Star_Tracker_Microcontroller

./: .bazelrc  .gitignore  Cargo.toml  Guide to Star Tracker Program.docx  LICENSE  Makefile  README.md  TestCalculator.xlsx  doxygen_config  setup.sh
cube/: .mxproject  Cargo.toml  README.md  build.rs  compile.sh  cube.ioc  database.json  generate_database.sh
cube/CM4/Core/Src/: main.c
cube/CM7/Core/Src/: main.c  stm32h7xx_hal_msp.c
cube/Makefile/: Makefile
cube/Makefile/CM4/: Makefile  stm32h755xx_flash_CM4.ld  stm32h755xx_sram2_CM4.ld
cube/Makefile/CM7/: Makefile  stm32h755xx_flash_CM7.ld  stm32h755xx_sram1_CM7.ld
cube/lib/: CList.rs  clist.rs  database.rs  lib.rs
cube/serial_com/: log.json  serial_com.pde  states.pde
star_tracker_database/: Cargo.toml  README.md  out.json  sample_database_config.json
star_tracker_database/lib/: lib.rs
star_tracker_database/lib/distribution/: distribute.rs  mod.rs
star_tracker_database/lib/io/: mod.rs
star_tracker_database/lib/tracking_mode/: database_generator.rs  k_vector.rs  mod.rs  star_database_element.rs
star_tracker_database/src/: database_json.rs  database_rust.rs
star_tracker_embed/: Cargo.toml  Embed.toml  README.md  build.rs  compile.sh  config.toml  database.json  memory.x  run.sh  template.txt
star_tracker_embed/.cargo/: config.toml
star_tracker_embed/src/: access_ram.rs  main.rs  main_hal.rs
star_tracker_embed/src/flash/: database.rs  img.rs  mod.rs
star_tracker_embed/src/utilities/: logger.rs
star_tracker_lib/: Cargo.toml  README.md
star_tracker_lib/lib/: lib.rs
star_tracker_lib/lib/attitude_determination/: QUEST.m  mod.rs
star_tracker_lib/lib/image_processing/: blob.rs  image.rs  image_basic.rs  image_c.rs  image_cropped.rs  image_word.rs  mod.rs  ref_word_image.rs  threshold.rs
star_tracker_lib/lib/projection/: extrinsic_parameters.rs  intrinsic_parameters.rs  mod.rs
star_tracker_lib/lib/tracking_mode/: constellation.rs  kernel_iterator.rs  pilot_finder.rs  specularity.rs  star_pair.rs
star_tracker_lib/lib/tracking_mode/database/: chunk_iterator.rs  database.rs  mod.rs  pyramid_database.rs  search_result.rs
star_tracker_lib/lib/util/: err.rs  maths.rs  mod.rs  test.rs  word.rs
star_tracker_lib/lib/util/distribution/: distribute.rs  mod.rs
star_tracker_lib/lib/util/linear_lookup/: vec.rs
star_tracker_lib/lib/util/units/: angle_axis.rs  bit_field.rs  crp.rs  matrix.rs  quaternion.rs  vector2.rs  vector3.rs
star_tracker_lib/src/: lib.rs
star_tracker_lib/src/attitude_determination/: mod.rs  quest.rs  wahba.rs
star_tracker_lib/src/config/: mod.rs
star_tracker_lib/src/image_processing/: basic_image.rs  blob.rs  c_image.rs  image.rs  image_basic.rs  image_c.rs  image_cropped.rs  image_word.rs  mod.rs  ref_image.rs  threshold.rs
star_tracker_lib/src/projection/: extrinsic_parameters.rs  intrinsic_parameters.rs  mod.rs
star_tracker_lib/src/tracking_mode/: constellation.rs  mod.rs  pilot_finder.rs  specularity.rs  star_pair.rs  star_pyramid.rs  star_triangle.rs  star_triangle_iterator.rs
star_tracker_lib/src/tracking_mode/database/: chunk_iterator.rs  database.rs  k_vector.rs  mod.rs  pyramid_database.rs  regional_database.rs  search_result.rs
star_tracker_lib/src/util/: aliases.rs  err.rs  maths.rs  mod.rs  test.rs  word.rs
star_tracker_lib/src/util/distribution/: distribute.rs  mod.rs
star_tracker_lib/src/util/linear_lookup/: mod.rs  vec.rs
star_tracker_lib/src/util/list/: array_list.rs  list_iterator.rs  mod.rs  vec.rs
star_tracker_lib/src/util/units/: angle_axis.rs  angles.rs  bit_field.rs  crp.rs  equatorial.rs  matrix.rs  mod.rs  quaternion.rs  unit_ops.rs  vector2.rs  vector3.rs
star_tracker_nix/: Cargo.toml  README.md  corr.fits  util_nix.rs
star_tracker_nix/lib/: lib.rs
star_tracker_nix/lib/image_processing/: cv_image.rs  mod.rs  nix_image.rs
star_tracker_nix/lib/integration_tests/: helper_functions.rs  image_processing.rs  k_vector.rs  mod.rs  tracking_mode.rs
star_tracker_nix/lib/io/: io.rs  mod.rs  sample.rs  star.rs  template.rs
star_tracker_nix/lib/tracking_mode/: database_generator.rs  k_vector.rs  mod.rs  search_timeout.rs  star_database_element.rs
star_tracker_nix/lib/util/: mod.rs
star_tracker_nix/lib/util/units/: mod.rs
star_tracker_nix/samples/16mm/: corr.fits  log.json
star_tracker_nix/samples/16mm_2/: corr.fits  log.json
star_tracker_nix/samples/16mm_checker_2/Albaldah/: albaldah.fits  log.json
star_tracker_nix/samples/16mm_checker_2/Albaldah_x2/: alibada.fits  log.json
star_tracker_nix/samples/16mm_checker_2/Anteries/: anteries.fits  log.json
star_tracker_nix/samples/16mm_checker_2/Karus_Austrulus/: kaus_austrulus.fits  log.json
star_tracker_nix/samples/16mm_checker_2/Karus_Austrulus_x2/: karus_austrulus_x2.fits  log.json
star_tracker_nix/samples/16mm_checker_2/Kekouan/: kekouan.fits  log.json
star_tracker_nix/samples/16mm_checker_2/Larawag/: larawag.fits  log.json
star_tracker_nix/samples/16mm_checker_2/Meridian/: log.json  meridian.fits
star_tracker_nix/samples/16mm_checker_2/Mula/: mula.fits
star_tracker_nix/samples/16mm_checker_2/Nunki/: nunki.fits  nunki.json
star_tracker_nix/samples/16mm_checker_2/Terribelium_IV/: log.json  terribelium_iv.fits
star_tracker_nix/samples/4mm_starlight/: log.json
star_tracker_nix/samples/6mm_starlight/: corr.fits  log.json
star_tracker_nix/samples/8mm_filterless/: corr_8mm_filterless.fits  log.json
star_tracker_nix/samples/tests/: 3.6_crux.fitsZone.Identifier  4mm_starlight.fitsZone.Identifier  6_crux.fitsZone.Identifier  6mm_starlight.fitsZone.Identifier  8_filtered.fitsZone.Identifier  8_filterless.fitsZone.Identifier
star_tracker_nix/samples/tests/3.6_crux/: 3.6_crux.fits
star_tracker_nix/samples/tests/4mm_starlight/: 4mm_starlight.fits
star_tracker_nix/samples/tests/6_crux/: 6_crux.fits
star_tracker_nix/samples/tests/6_mm_starlight/: 6mm_starlight.fits
star_tracker_rp/: CMakeLists.txt  Cargo.toml  compile.sh  database.json  main.c  setup.sh
star_tracker_rp/lib/: lib.rs
star_tracker_rp/lib/flash/: database.rs  img.rs  mod.rs
(+833 files in other folders)
