[package]
name = "star_tracker"
version = "0.1.0"
authors = ["Tom Creusot <tom.creusot@student.curtin.edu.au>"]
publish = false
description = "The code for a star tracker which could be used on a microcontroller for satellites."
repository = "https://github.com/TomCreusot/Star_Tracker_Microcontroller"

#licence = "GNU General Public License v3.0"

[lib]
name = "star_tracker"
path = "src/lib.rs"

# [[bin]]
# name = "main"
# path = "src/bin/main.rs"


[dependencies]
# Inbuilt image reader.
[target.'cfg(not(embedded))'.dependencies]
image = "0.23.13"
mockall = "0.10.2"
csv = "1.1.5"
serde = {version = "1.0", features = ["derive"] }
# serde = {version = "1.0.126" "1.0", features = ["derive"] }

static_assertions = "1.1.0" # Compile time asserts.

rand = "0.8.0"

# Observing the database and hipacaros database.
plotters = "0.3.1"

# Downloading HYG database.
curl = "0.4.38"

# Read .fit files for corr.fits (lens distortion)
fitsio = "0.19.0" 
fitsio-derive = "0.2.0"



# Bench test.
[dev-dependencies]
criterion = "0.2.4"
# criterion = "0.3.4"




[features]
nix = []
test_integration = []
# platform = []#["nix", "embedded"]

# Bench test setup
# [[bench]]
# name = "bench"
# harness = false		# Disables standard tests.


# [[bin]]
# name = "demo"
# path = "src/bin/demo.rs"


# [[bin]]
# name = "spectral_test"
# path = "src/bin/spectral_test.rs"
# # features = ["nix"]