[package]
name = "star_tracker"
version = "0.1.0"
authors = ["Tom Creusot <tom.creusot@student.curtin.edu.au>"]
publish = false
description = "The code for a star tracker which could be used on a microcontroller for satellites."
repository = "https://github.com/TomCreusot/Star_Tracker_Microcontroller"

#licence = "GNU General Public License v3.0"

[lib]
name = "star_tracker"
path = "src/lib.rs"



[dependencies]
# Inbuilt image reader.
[target.'cfg(not(embedded))'.dependencies]
image = "0.23.13"

# For Reading Database
csv = "1.1.5"


serde = {version = "1.0", features = ["derive"] }

static_assertions = "1.1.0" # Compile time asserts.


# Observing the database and hipacaros database.
plotters = "0.3.1"

# Downloading HYG database.
curl = "0.4.38"

# Using OpenCV No Longer Needed.
# Read .fit files for corr.fits (lens distortion)
# fitsio = "0.19.0" 
# fitsio-derive = "0.2.0"

# For lens calibration (Not In Main Code).
opencv = "0.63.0" # or whatever version is the latest


# 
#  TESTING
# 

mockall = "0.10.2"		# Mocks functions (Mainly used in tracking_mode).
rand = "0.8.0"			# Create random variables which can be used for testing and simulating.
# Bench test.
[dev-dependencies]
criterion = "0.2.4"		# Measures performance of unit tests.



[features]
nix = []
test_integration = []
setup = [] # tracking_mode/database will not exist until this is run.