[package]
name = "cube"
version = "0.1.0"
authors = ["Tom Creusot <tom.creusot@student.curtin.edu.au>"]
publish = false
description = "The code for a star tracker which could be used on a microcontroller for satellites."
repository = "https://github.com/TomCreusot/Star_Tracker_Microcontroller"

#licence = "GNU General Public License v3.0"

[lib]
name = "cube"
path = "lib/lib.rs"
crate-type = ["staticlib"]


[dependencies.star_tracker_lib]
path = "../star_tracker_lib"
features = ["bit_32"]
optional = false